# hash-thing

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  ONE_POSSIBLE_METAVERSE_VISION.md  README.md  SPEC.md  ai-coding-setup.md  manifest  rust-toolchain.toml  test_mult  test_mult.rs
.agents/: README.md
.agents/commands/: diagram.md  ship-auto.md  ship.md  trident-code-review.md  trident-plan-review.md
.agents/prompts/: CodeReview-Evolutionary.md  PlanReview-Adversarial.md  PlanReview-Evolutionary.md  PlanReview-Standard.md
.agents/scripts/: ci-watch.sh  dolt-arch-migrate.md
.agents/skills/mayor/: SKILL.md
.agents/skills/review-tiers/: SKILL.md
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.bin/: bd  com.hash-thing.crew-nudge.plist  crew-nudge
.cargo/: config.toml
.github/workflows/: ci.yml  dev-build-cron.yml  linuxdeploy-pin-watch.yml  release.yml
.ship-notes/: design-ledger.md  multiplayer-model-options.md
crates/ht-octree/: Cargo.toml
crates/ht-octree/src/: disk.rs  lib.rs  node.rs  store.rs
crates/ht-render/: Cargo.toml
crates/ht-render/src/: font.rs  hotbar.wgsl  hud.wgsl  legend.wgsl  lib.rs  particle.wgsl  renderer.rs  svdag.rs  svdag_blit.wgsl  svdag_raycast.wgsl
docs/: worldgen-evolution.md
docs/design/: svdag-disk-format.md
docs/perf/: audience-hw-distribution.md  cswp-lod.md  regimes.md  render-perf-direction.md  svdag-perf-paper.md  svdag-perf-spec.md  svdag-research-log.md
notes/: CR-pfpn-Claude-2026-04-27.md  CR-pfpn-Claude-2026-04-28.md  CR-pfpn-Claude-Critical-2026-04-28.md  CR-pfpn-Codex-2026-04-27.md  CR-pfpn-Codex-2026-04-28.md  CR-pfpn-Codex-Critical-2026-04-28.md  CR-pfpn-Codex-Evolutionary-2026-04-28.md  aqq4-thesis-verdict.md  nav-epic-directive.md
notes/.tmp/ship-onyx-2nd/: full-diff.txt  review-standard.md  ts
notes/.tmp/trident-1v0.4-margolus-code/: code_review_critical.md  commits.txt  diff.patch  prompt-critical-codex.md  prompt-critical-gemini.md  prompt-critical.md  prompt-evolutionary-codex.md  prompt-evolutionary-gemini.md  prompt-evolutionary.md  prompt-standard-codex.md  prompt-standard-gemini.md  prompt-standard.md
notes/.tmp/trident-cr-69z-crew-nudger/: code_review.md  context.md  prompt-critical-codex.md  prompt-critical-gemini.md  prompt-evolutionary-codex.md  prompt-evolutionary-gemini.md  prompt-standard-codex.md  prompt-standard-gemini.md
notes/.tmp/triple-69z-crew-nudger/: plan-input.md  prompt-standard-codex.md  prompt-standard-gemini.md
packaging/linux/: hash-thing.desktop
scripts/: demo.sh  hash-thing-demo  init-worktree-seat.sh  launch-codex-crew.sh  notarize-macos-app.sh  test-hash-thing-demo.sh
skills/mayor/: SKILL.md
src/: acquire_harness.rs  lib.rs  main.rs  perf.rs  player.rs  rng.rs  scale.rs
src/octree/: mod.rs  node.rs  store.rs
src/render/: mod.rs  particle.wgsl  raycast.wgsl  renderer.rs  svdag.rs  svdag_raycast.wgsl
src/sim/: chunks.rs  entity.rs  hashlife.rs  margolus.rs  mod.rs  mutation.rs  rule.rs  world.rs
src/terrain/: caves.rs  dungeons.rs  gen.rs  materials.rs  mod.rs  noise.rs
src/terrain/field/: const_field.rs  density.rs  gyroid.rs  half_space.rs  heightmap.rs  implicit.rs  lattice.rs  mod.rs  terrain_blend.rs
tests/: base_case_rayon_parity.rs  bench_chunk_reachable.rs  bench_cold_gen_big_map.rs  bench_cold_gen_lod.rs  bench_depth_histogram.rs  bench_edit.rs  bench_flythrough_4096.rs  bench_gpu_hash_table.rs  bench_gpu_level_dispatcher.rs  bench_gpu_raycast.rs  bench_hashlife.rs  bench_macro_cache_size.rs  bench_svdag.rs  bench_terrain_gen.rs  memo_hit_thesis_probe.rs  probe_gap_fill_lightcone.rs  repro_14yp_water_floor_checkerboard.rs  repro_v3b2_water_bunching.rs  sim_chunks.rs  verify_gen_hash_cons.rs
web/: index.html
