[package]
name = "hash-thing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "29"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rustc-hash = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }

# Optimize dependencies in dev builds (our code stays debug for fast iteration)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"

# First-party warning gating. Keeps unused imports / variables / etc. as hard
# errors so they do not drift, but dead_code stays at warn-level: in a binary
# crate `pub` items cannot be consumed externally, so dead_code on them is
# noise we are tracking out-of-band rather than gating in CI.
#
# This block applies only to our crate, never to dependencies, and unlike
# workflow-level RUSTFLAGS it does not poison the cache fingerprint.
[lints.rust]
unused = { level = "deny", priority = -1 }
dead_code = "warn"
