[workspace]
members = [".", "crates/ht-octree", "crates/ht-render"]

[package]
name = "hash-thing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ht-octree = { path = "crates/ht-octree" }
ht-render = { path = "crates/ht-render" }
wgpu = "29"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rustc-hash = "2"
# hash-thing-ftuu (vqke.4) + hash-thing-ecmn (vqke.4.1) +
# hash-thing-ite4: rayon-driven base-case scheduling. Used by both
# `RayonPerFanout` (level-4 8-way fanout, ftuu) and `RayonBfs`
# (whole-step level-3 batch, ecmn). Default since ite4 (2026-04-29)
# is `RayonBfs`. See src/sim/world.rs `BaseCaseStrategy` rustdoc.
rayon = "1"
# hash-thing-hc0g: --dump-frame headless screenshot harness writes PNG.
# Pure-rust encoder, no transitive image-format bloat.
png = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }

# Optimize dependencies in dev builds (our code stays debug for fast iteration)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"

# Fast-compile perf profile: representative for relative perf comparisons
# without LTO cost. Usage: cargo build --profile perf ...
#
# NOTE: This is a custom profile name (not `[profile.bench]`) so the artifact
# lands in `target/perf/` rather than colliding with `target/release/` (the
# demo binary). See hash-thing-xer4: Cargo built-in `bench` profile shares
# `target/release/` with `release` (rust-lang/cargo#6988 explicitly rejected
# stabilizing per-profile dir-name).
[profile.perf]
inherits = "release"
lto = false
debug = 1

# First-party warning gating. Keeps unused imports / variables / etc. as hard
# errors so they do not drift, but dead_code stays at warn-level: in a binary
# crate `pub` items cannot be consumed externally, so dead_code on them is
# noise we are tracking out-of-band rather than gating in CI.
#
# This block applies only to our crate, never to dependencies, and unlike
# workflow-level RUSTFLAGS it does not poison the cache fingerprint.
[lints.rust]
unused = { level = "deny", priority = -1 }
dead_code = "warn"
